Page Listing Front & Single Listing...

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -8198,8 +8198,9 @@ section.fullwidth_block .utf_listing_item-container.list-layout{
     margin-bottom: 9px;
     position: absolute;
     z-index: 9999;
-    top: 58px;
-    right: 20px;
+    left:20px;
+	top:40px; 
+
 }
 #titlebar.utf_listing_titlebar span.featured_tag {	
 	margin: 0;
