--- a/public/listeo/css/style.css
+++ b/public/listeo/css/style.css
@@ -9804,7 +9804,7 @@ body .notification strong { border: none; }
 
 .testimonial-carousel .slick-slide.slick-active .testimonial-box {
 	background: #66676b;
-	color: #fff;
+	color: #a58d0b;
 }
 
 .testimonial-carousel .slick-slide.slick-active .testimonial:before {
