--- a/public/listeo/css/style.css
+++ b/public/listeo/css/style.css
@@ -292,14 +292,14 @@ header.fullwidth .container {
 
 .left-side {
 	float: left;
-	width: 65%;
+	width: 40%;
 	display: inline-block;
 
 }
 
 .right-side {
 	float: right;
-	width: 35%;
+	width: 60%;
 	display: inline-block;
 }
 
@@ -339,7 +339,7 @@ header.fullwidth .container {
 #header.cloned { background-color: #000; }
 
 /* Sticky header styles */
-#header.cloned #logo img { transform: translate3d(0,0,0); max-width: 120px; margin-top: 1px; }
+#header.cloned #logo img { transform: translate3d(0,0,0); /*max-width: 120px; */margin-top: 1px; }
 #header.cloned { padding: 18px 0 7px 0; }
 
 .sticky-logo { display: none; }
