--- a/public/listeo/css/style.css
+++ b/public/listeo/css/style.css
@@ -1776,21 +1776,22 @@ em.mm-counter+a.mm-fullsubopen+span {
 
 	.header-widget {
 		padding: 20px 0;
-		border-top: 1px solid #eee;
+		/*border-top: 1px solid #eee;*/
 		display: flex;
 		flex-wrap: wrap;
 		align-items: flex-start;
 	}
 
 	.header-widget a.button.border {
+		margin-top: 7px;
 		padding: 7px 16px;
 		background-color: transparent;
 		font-size: 16px;
-		min-width: auto;
+		min-width: 200px;
 		float: right;
 	}
 
-	.sign-in,
+	.sign-in,.prest-in,
 	.user-menu { flex: 1; }
 
 	.header-widget .sign-in { top: 9px; }
@@ -1811,7 +1812,7 @@ em.mm-counter+a.mm-fullsubopen+span {
 
 	.header-style-2 .menu-responsive { width: 750px; margin-left: auto; margin-right: auto; float: none; padding: 0 15px; }
 
-	#header-container.header-style-2 .header-widget { width: calc(100%);  border-top: 1px solid #e0e0e0; padding-top: 30px; }
+	#header-container.header-style-2 .header-widget { width: calc(100%);  /*border-top: 1px solid #e0e0e0;*/ padding-top: 30px; }
 
 }
 
@@ -1925,7 +1926,7 @@ body .typed-cursor.typed-cursor--blink.typed-fade-out{
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 50%;
-	height: 620px;
+	height: 890px;
 	z-index: 9;
 }
 
@@ -1963,8 +1964,8 @@ body .typed-cursor.typed-cursor--blink.typed-fade-out{
 	overflow: hidden;
 }
 .main-search-container video {
-	top: 50%;
-	transform: translateY(-52%);
+	/*top: 50%;
+	transform: translateY(-52%);*/
 	left: 0;
 	min-width: 100%;
 	min-height: 100%;
@@ -2201,7 +2202,7 @@ body .typed-cursor.typed-cursor--blink.typed-fade-out{
 @media (max-width: 1024px) {
     .transparent-header .header-widget {
         padding: 15px 0;
-        border-top: 1px solid rgba(255,255,255,0.15);
+       /* border-top: 1px solid rgba(255,255,255,0.15);*/
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
@@ -2223,6 +2224,12 @@ body .typed-cursor.typed-cursor--blink.typed-fade-out{
         padding-left: 0;
         padding-right: 0;
     }
+
+    /* hs center video */
+    .main-search-container video {
+	/*top: 50%;
+	transform: translateY(-52%);*/
+	left: -80%;}
     
 }
 
