page prestataires ( /recherche )

--- a/public/listeo/css/style.css
+++ b/public/listeo/css/style.css
@@ -11796,14 +11796,14 @@ span.like-icon {
 }
 
 #titlebar.gradient {
-	background: linear-gradient(to bottom, #f7f7f7 0%, rgba(255,255,255,0.5));
+	background: linear-gradient(to bottom, #ffd700 0%, rgba(254,214,0));
 	padding-bottom: 10px;
 }
 
 #titlebar span a,
 #titlebar span {
 	font-size: 20px;
-	color: #888;
+	color: #808080;
 	margin-bottom: 3px;
 	margin-top: 6px;
 	display: inline-block;
