--- a/public/listeo/css/styleNotfound.css
+++ b/public/listeo/css/styleNotfound.css
@@ -88,9 +88,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:500,600,700');
 
-.NotFound{ background-image: url(http://localhost/rendezvous/public/listeo/images/404.jpg);
+.NotFound{
     background-repeat: no-repeat;
-    background-size: cover;
     width: auto;}
 .notFound-row{ margin-left: -15px;
 	margin-right: -15px;position: absolute;margin-top: 186px;margin-left: 116px;width: 662px;height: 429px;}
@@ -100,7 +99,6 @@
     font-size: 95px;;
     margin-top: 43px;
     font-family: 'Raleway';
-    margin-left: 1000px;
     margin-bottom: -54px;
 }
 
