--- a/public/listeo/css/style.css
+++ b/public/listeo/css/style.css
@@ -16455,8 +16455,8 @@ button.mfp-close {
 	transform: translate(-50%,0%);
 }
 
-#small-dialog .mfp-close,
-#sign-in-dialog, .mfp-close,
+#small-dialog .mfp-close,#small-dialog2 .mfp-close,
+#sign-in-dialog,#sign-in-dialog2 ,.mfp-close,
 .mfp-close:hover {
 	color: #fff;
 }
@@ -16464,6 +16464,7 @@ button.mfp-close {
 
 /* Popup close button*/
 #sign-in-dialog .mfp-close,
+#sign-in-dialog2 .mfp-close,
 #small-dialog .mfp-close {
 	color: #666;
 	background-color: #e4e4e4;
@@ -16474,7 +16475,7 @@ button.mfp-close {
     height: 40px;
 }
 
-#sign-in-dialog .mfp-close:hover,
+#sign-in-dialog .mfp-close:hover,#sign-in-dialog2 .mfp-close:hover,
 #small-dialog .mfp-close:hover {
 	color: #fff;
 	transform: rotate(0);
@@ -16483,6 +16484,8 @@ button.mfp-close {
 
 #sign-in-dialog .mfp-close::after,
 #sign-in-dialog .mfp-close::before,
+#sign-in-dialog2 .mfp-close::after,
+#sign-in-dialog2 .mfp-close::before,
 #small-dialog .mfp-close::after,
 #small-dialog .mfp-close::before {
 	top: 4px;
@@ -16607,7 +16610,7 @@ button.mfp-close {
 }
 
 /* Popup */
-#sign-in-dialog,
+#sign-in-dialog,#sign-in-dialog2,
 #small-dialog {
 	background: #fff;
 	padding: 40px;
@@ -16621,12 +16624,12 @@ button.mfp-close {
 }
 
 
-#sign-in-dialog {
+#sign-in-dialog,#sign-in-dialog2 {
 	max-width: 700px;
 }
 
 
-#sign-in-dialog span.line,
+#sign-in-dialog span.line,#sign-in-dialog2 span.line,
 #small-dialog span.line {padding-top: 0;}
 
 .my-mfp-zoom-in .zoom-anim-dialog {
@@ -18394,13 +18397,13 @@ body .category-box-btn:hover {
 	    padding: 30px;
 	}
 
-	#sign-in-dialog, #small-dialog {
+	#sign-in-dialog,#sign-in-dialog2, #small-dialog {
 		background: #fff;
 		padding: 30px;
 		padding-top: 0;
     }
 
-	#sign-in-dialog .mfp-close, #small-dialog .mfp-close {
+	#sign-in-dialog .mfp-close,#sign-in-dialog2 .mfp-close, #small-dialog .mfp-close {
 	    top: 24px;
 	    right: 30px;
 	    width: 40px;
@@ -18464,7 +18467,7 @@ body .category-box-btn:hover {
 	    line-height: 30Px;
 	}
 
-	#sign-in-dialog, #small-dialog {
+	#sign-in-dialog,#sign-in-dialog2, #small-dialog {
 	    max-width: 75vw;
 	}
 
