--- a/public/listeo/css/style.css
+++ b/public/listeo/css/style.css
@@ -16455,8 +16455,8 @@ button.mfp-close {
 	transform: translate(-50%,0%);
 }
 
-#small-dialog .mfp-close,#small-dialog2 .mfp-close,
-#sign-in-dialog,#sign-in-dialog2 ,.mfp-close,
+#small-dialog .mfp-close,#small-dialog2 .mfp-close,#Ajout-Res .mfp-close:hover,
+#sign-in-dialog,#sign-in-dialog2 .mfp-close,
 .mfp-close:hover {
 	color: #fff;
 }
@@ -16464,7 +16464,7 @@ button.mfp-close {
 
 /* Popup close button*/
 #sign-in-dialog .mfp-close,
-#sign-in-dialog2 .mfp-close,
+#sign-in-dialog2 .mfp-close,#Ajout-Res .mfp-close,
 #small-dialog .mfp-close {
 	color: #666;
 	background-color: #e4e4e4;
@@ -16475,7 +16475,7 @@ button.mfp-close {
     height: 40px;
 }
 
-#sign-in-dialog .mfp-close:hover,#sign-in-dialog2 .mfp-close:hover,
+#sign-in-dialog .mfp-close:hover,#sign-in-dialog2 .mfp-close:hover,#Ajout-Res .mfp-close:hover,
 #small-dialog .mfp-close:hover {
 	color: #fff;
 	transform: rotate(0);
@@ -16486,6 +16486,8 @@ button.mfp-close {
 #sign-in-dialog .mfp-close::before,
 #sign-in-dialog2 .mfp-close::after,
 #sign-in-dialog2 .mfp-close::before,
+#Ajout-Res .mfp-close::after,
+#Ajout-Res .mfp-close::before, 
 #small-dialog .mfp-close::after,
 #small-dialog .mfp-close::before {
 	top: 4px;
@@ -16622,7 +16624,17 @@ button.mfp-close {
 	box-sizing:border-box;
 	border-radius: 4px;
 }
-
+#Ajout-Res {
+	background: #fff!important;
+	padding: 40px;
+	padding-top: 0;
+	text-align: left;
+	max-width: 610px!important;
+	margin: 40px auto;
+	position: relative!important;
+	box-sizing:border-box;
+	border-radius: 4px;
+}
 
 #sign-in-dialog,#sign-in-dialog2 {
 	max-width: 700px;
@@ -16631,7 +16643,7 @@ button.mfp-close {
 
 #sign-in-dialog span.line,#sign-in-dialog2 span.line,
 #small-dialog span.line {padding-top: 0;}
-
+#Ajout-Res span.line {padding-top: 0;}
 .my-mfp-zoom-in .zoom-anim-dialog {
 	opacity: 0;
 	-webkit-transition: all 0.2s ease-in-out;
@@ -18402,6 +18414,11 @@ body .category-box-btn:hover {
 		padding: 30px;
 		padding-top: 0;
     }
+	#Ajout-Res {
+		background: #fff;
+		padding: 30px;
+		padding-top: 0;}
+
 
 	#sign-in-dialog .mfp-close,#sign-in-dialog2 .mfp-close, #small-dialog .mfp-close {
 	    top: 24px;
@@ -18409,7 +18426,12 @@ body .category-box-btn:hover {
 	    width: 40px;
 	    height: 40px;
 	}
-
+	#Ajout-Res .mfp-close{
+	    top: 24px;
+	    right: 30px;
+	    width: 40px;
+	    height: 40px;
+	}
 	.list-box-listing { display: block;}
 
 	.list-box-listing-content .inner {
@@ -18470,7 +18492,9 @@ body .category-box-btn:hover {
 	#sign-in-dialog,#sign-in-dialog2, #small-dialog {
 	    max-width: 75vw;
 	}
-
+	#Ajout-Res {
+	    max-width: 75vw;
+	}
 	.listing-nav li a {
 	    border-bottom: 1px solid #e0e0e0;
 	    padding: 15px;
