--- a/public/listeo/css/style.css
+++ b/public/listeo/css/style.css
@@ -2226,7 +2226,11 @@ body .typed-cursor.typed-cursor--blink.typed-fade-out{
     }
 
     /* hs center video */
- 
+    .main-search-container video {
+	/*top: 50%;
+	transform: translateY(-52%);*/
+	left: 0!important;
+	}
     
 }
 
