--- a/public/listeo/css/style.css
+++ b/public/listeo/css/style.css
@@ -2229,8 +2229,7 @@ body .typed-cursor.typed-cursor--blink.typed-fade-out{
     .main-search-container video {
 	/*top: 50%;
 	transform: translateY(-52%);*/
-	left: 0!important;
-	}
+	left: -80%;}
     
 }
 
